--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <p>
           Você pode conhecer mais sobre a banda
           <a href="https://pt.wikipedia.org/wiki/The_Offspring"
-            >Clicando aqui</a>
+            >clicando aqui</a>
         </p>
       </div>
     </div>
